Added Hololive China(No description yet)

--- a/index.html
+++ b/index.html
@@ -3694,6 +3694,324 @@
             </div>
         </div>
 
+        <!--Civia-->
+        <div class="bg-modal-civia">
+            <div class="modal-content">
+                <div class="closepop-civia">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/CN/Civia.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Civia」</strong>🌙🦄</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/_Civia" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCgNVXGlZIFK96XdEY20sVjg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Civia-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Civia-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Civia-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Civia-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Civia-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Civia-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/fuka_hire">Fukahire</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/ZKeB5oLPzqI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            A former member of the now retired Hololive China.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Space Echo-->
+        <div class="bg-modal-echo">
+            <div class="modal-content">
+                <div class="closepop-echo">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/CN/Echo.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Spade Echo」</strong>🍑</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media:<br>(YT is Billibilli) </h3>
+                        <a href="https://twitter.com/SpadeEcho" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://space.bilibili.com/456368455" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Echo-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Echo-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Echo-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Echo-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Echo-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Echo-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://hololive.wiki/wiki/Kagura_Nana">	Kagura Nana</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/E9j4XETFFPA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            A former member of the now retired Hololive China.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Yogiri-->
+        <div class="bg-modal-yogiri">
+            <div class="modal-content">
+                <div class="closepop-yogiri">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/CN/Yogiri.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Yogiri」</strong>🍼 🎸</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media:<br>(YT is Billibilli) </h3>
+                        <a href="https://twitter.com/_YOGiRi_owo" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://space.bilibili.com/427061218/" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Yogiri-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Yogiri-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Yogiri-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Yogiri-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Yogiri-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Yogiri-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/v_loAlo">Honda Roaro</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/jkB8zfTrTBw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            A former member of the now retired Hololive China.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Artia-->
+        <div class="bg-modal-artia">
+            <div class="modal-content">
+                <div class="closepop-artia">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/CN/Artia.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Artia」</strong>❄️</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media:<br>(YT is Billibilli) </h3>
+                        <a href="https://twitter.com/Artia_OW" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://space.bilibili.com/511613155/" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Artia-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Artia-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Artia-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Artia-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Artia-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Artia-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/Par1y">	Paryi</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/GTUaHIJZt_E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            A former member of the now retired Hololive China.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Doris-->
+        <div class="bg-modal-doris">
+            <div class="modal-content">
+                <div class="closepop-doris">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/CN/Doris.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Doris」</strong>🐟</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media:<br>(YT is Billibilli) </h3>
+                        <a href="https://twitter.com/Doris_Hololive" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://space.bilibili.com/511613156/" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Doris-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Doris-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Doris-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Doris-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Doris-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Doris-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://www.pixiv.net/en/users/25486006">ooc</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/ylpTIQ-ksC0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            A former member of the now retired Hololive China.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Rosalyn-->
+        <div class="bg-modal-rosalyn">
+            <div class="modal-content">
+                <div class="closepop-rosalyn">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/CN/Rosalyn.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Rosalyn」</strong>📖</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media:<br>(YT is Billibilli) </h3>
+                        <a href="https://twitter.com/Rosalyn_holoCN" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://space.bilibili.com/511613157/" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Rosalyn-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Rosalyn-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Rosalyn-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Rosalyn-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Rosalyn-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Rosalyn-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/xx_Chon_xx">Chon</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/FN4nUE_oOsQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            A former member of the now retired Hololive China.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
     </body>
