Update images, readme, holoEN

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+        <div class="web-loader">
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_VFdaee.json"  background="#FFFFFF"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+        </div>
+
         <div class="header">
             <img class="headerimg" src="Photos/Company Logo.png">
             <img class="headerimg" src="Photos/Cover Corp.png">
@@ -3157,7 +3162,7 @@
                             <h3 style="margin: 0;"><a href="https://twitter.com/nyorinyori">Niyori</a></h3>
                         </div>
                     </div>
-                    <iframe class="infotopright" src="https://www.youtube.com/embed/5xTfrvTGhZ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/q4N7EhUWOAA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             "Adamoona!" Moona is a shy girl that speaks in a upbeat tone paired with a pretty unique Indonesian accent, and part of
@@ -3415,7 +3420,7 @@
                 <div class="closepop-kiara">+</div>
                 <div class="column-left">
                     <img src="Photos/Profile/EN/Kiara.jpg" alt="Missing image" style="width:100%;height:38%;">
-                    <p class="talentp" style="color:black;text-align:center;"><strong>「Kiara」</strong>"Chicken"<br>🐔</p>
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Kiara」</strong>"Bottom-left"<br>🐔</p>
                     <div class="socialbar">
                         <br><br>
                         <h3 style="margin: 0;">Social Media: </h3>
@@ -3459,7 +3464,10 @@
                             having her emoji as a chicken and calling her fan base Kiara Fan Club(KFC). She has set her eyes dead straight on 
                             Mori and lucky for her, she can't be killed, or she would face the wrath of death itself. She is great at languages, 
                             bring a polyglot, fluent in English, Japanese, German and Bird(What even is this). Her favourite senior is Usada 
-                            Pekora, even doing her laugh in her debut strean, which caught the attention of Pekora herself.
+                            Pekora, even doing her laugh in her debut strean, which caught the attention of Pekora herself. Kiara also has a nickname of
+                             bottom-left, this is a meme from the hololive subreddit which has a chart made of the hololive members based on their purity(y-axis)
+                              and intelligence(x-axis), in which Kiara is thought to be neither pure nor smart hence bottom-left. Her content is primarily gaming with the occasional
+                              memes and talkshow hosted by her by the name of "HoloTalk".
                         </p>
                     </div>
                 </div>
@@ -3472,7 +3480,7 @@
                 <div class="closepop-mori">+</div>
                 <div class="column-left">
                     <img src="Photos/Profile/EN/Mori.jpg" alt="Missing image" style="width:100%;height:38%;">
-                    <p class="talentp" style="color:black;text-align:center;"><strong>「Mori Calliope」</strong>"Reaper Rapper"<br>💀</p>
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Calli」</strong>"Reaper Rapper"<br>💀</p>
                     <div class="socialbar">
                         <br><br>
                         <h3 style="margin: 0;">Social Media: </h3>
@@ -3513,10 +3521,12 @@
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             Mori Calliope, not Cantaloupe, and deffinitely not ca-lee-oh-pee. It's 
-                            cuh-ly-uh-pee, so many people get it wrong! Not to mention she hates cantalouprd. This reaper reigning from
+                            cuh-ly-uh-pee, so many people get it wrong! Not to mention she hates cantaloupes. This reaper reigning from
                             the Underworld has come not to reap our souls, but to understand us humans. This reaper is fascinated and 
                             wants to learn more about us and our culture. Although she may not be human, she is down to earth, and don't forget 
-                            she is an amazing rapper that you should not battle against.
+                            she is an amazing rapper that you should not battle against in which the background track is usually produced by her and Coro from TamaOnSen a doujin circle
+                            that she respects a lot. Her content is primarily gaming with the occasional unarchived singing stream
+                            to avoid copyright and drinking streams where she drinks wine with the viewers.
                         </p>
                     </div>
                 </div>
@@ -3529,7 +3539,7 @@
                 <div class="closepop-ina">+</div>
                 <div class="column-left">
                     <img src="Photos/Profile/EN/Ina.jpg" alt="Missing image" style="width:100%;height:38%;">
-                    <p class="talentp" style="color:black;text-align:center;"><strong>「Ina'nis」</strong>"Ina"<br>🐙</p>
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Ina」</strong>"Tako"<br>🐙</p>
                     <div class="socialbar">
                         <br><br>
                         <h3 style="margin: 0;">Social Media: </h3>
@@ -3563,17 +3573,20 @@
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Designer: </h3>
-                            <h3 style="margin: 0;"><a href="https://twitter.com/kuroboshi">Kuroboshi Kouhaku</a></h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/kuroboshi">黒星紅白</a></h3>
                         </div>
                     </div>
                     <iframe class="infotopright" src="https://www.youtube.com/embed/-Aenybcitkc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
-                            Ina was nothing but an ordinary girl, but after an encounter with a book, she started to have tentace controlling power.
-                            She has also started hearing rebalations and thus joined Hololive to check on the humans, despite being one herself.
-                            She is also a talented trilingual, speaking Korean, Japanese and English. She loves food, gaming, reading and drawing, and 
-                            despises cucumber and bugs. Her personality is one that is cute and innocent, which some find adorable. Besides linguistic talent, 
-                            she is an amazing artist, even drawing some art of herself and drawing Mori Callope's EP Cover.
+                            Ina was nothing but an ordinary girl, but after an encounter with a book, she started to have tentacle controlling powers.
+                            She has also started hearing revalations and thus joined Hololive to check on the humans on behalf of the ancient ones,
+                             despite being one herself.
+                            She is also a talented trilingual, speaking Korean, Japanese and English. She loves food, gaming, reading, "dad jokes" and drawing,
+                            despises cucumber, bugs and people trying to squish her hair stating that she'll "bonk" them, with a crowbar.
+                             Her personality is one that is cute and innocent, which some find adorable. Besides linguistic talent, 
+                            she is an amazing artist, even drawing some art of herself and drawing Mori Callope's EP Cover. Her content is primarily gaming
+                             and drawing, while chatting often giving her viewers art tips.
                         </p>
                     </div>
                 </div>
@@ -3586,7 +3599,7 @@
                 <div class="closepop-gura">+</div>
                 <div class="column-left">
                     <img src="Photos/Profile/EN/Gura.jpg" alt="Missing image" style="width:100%;height:38%;">
-                    <p class="talentp" style="color:black;text-align:center;"><strong>「Gawr Gura」</strong>"a"<br>🔱</p>
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Gura」</strong>"a"<br>🔱</p>
                     <div class="socialbar">
                         <br><br>
                         <h3 style="margin: 0;">Social Media: </h3>
@@ -3626,11 +3639,12 @@
                     <iframe class="infotopright" src="https://www.youtube.com/embed/uydZpb_F7So" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
-                            This apex predator of the sea has come to... game?! This adorable shark has come to play. But don't
+                            This apex predator of the ocean has come to... game?! This adorable shark has come to play. But don't
                             be fooled, this shark is a beast at rhythm games. She is also the most popular idol in the company, being the first 
                             to reach 2 million subscribers on YouTube, and it all started with her saying "a" on her debut. Despite her old age, 
-                            she is rather small, and she rationalises this as aerodynamics. She is an absolute foodie and hates hot sand, she also 
-                            fears the viewers hearing her stomach growl.
+                            she is rather small, and she rationalises this as hydrodynamics. She is an absolute foodie and hates hot sand, she also 
+                            fears the viewers hearing her stomach growl. Gura's content is primarily gaming and singing streams which some are unarchived
+                            for copyright concerns.
                         </p>
                     </div>
                 </div>
@@ -3643,7 +3657,7 @@
                 <div class="closepop-watson">+</div>
                 <div class="column-left">
                     <img src="Photos/Profile/EN/Watson.jpg" alt="Missing image" style="width:100%;height:38%;">
-                    <p class="talentp" style="color:black;text-align:center;"><strong>「Amelia Watson」</strong>"Ame"<br>🔍🔎</p>
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Ame」</strong>"Ground pound"<br>🔍🔎</p>
                     <div class="socialbar">
                         <br><br>
                         <h3 style="margin: 0;">Social Media: </h3>
@@ -3683,11 +3697,12 @@
                     <iframe class="infotopright" src="https://www.youtube.com/embed/42QhdIradBc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
-                            "It is elementary, my dear Watson." This Sherlock-inspired detective has come to investigate Hololive English.
-                            She has a fake identity to ensure her exostance is kept quiet, and she even puts on a fake accent. She has a passion 
+                            "Elementary, my dear Watson." This Holmes-inspired detective has come to investigate Hololive English.
+                            She has a fake identity to ensure her existance is kept quiet, and she even puts on a fake accent. She has a passion 
                             for literature, even a rap about Dr. Seuss was made from her by a fan.(Take it slowly, this detective is dangerous)
                             Everything stated about her is fake, for obvious reasons, and who knows what lies beyond that facade of hers. She is also a beast at gaming, 
-                            playing Osu!Mania, CS:GO and Apex Legends like a pro, be sure to be on her party this time.
+                            playing Osu!Mania, CS:GO and Apex Legends like a pro, be sure to be on her party this time and likes to ground pound(Mario reference) mothers.
+                            Her content is primarily gaming with frequent movie watchalong streams.
                         </p>
                     </div>
                 </div>
@@ -4020,21 +4035,4 @@
     <!--Scroll to top button-->
     <button onclick="topFunction()" id="scroll_to_top" title="Go to top">Up</button>
 
-    <script>
-        //When user scrolls down, show button
-        window.onscroll = function() {scrollFunction()};
-
-        function scrollFunction(){
-        if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 200) {
-            document.getElementById("scroll_to_top").style.display = "block";
-            } else {
-                document.getElementById("scroll_to_top").style.display = "none";
-            }
-        }
-        //When user clicks button scroll to top
-        function topFunction(){
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
 </html>
