--- a/index.html
+++ b/index.html
@@ -405,9 +405,12 @@
                     <iframe class="infotopright" src="https://www.youtube.com/embed/QjcOosTcTSk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
-                            "Harobo!", Roboco's signature greeting. A cheerful robot from a random wasteland with a beastly setup, one of the specially
-                            inducted, known as the 0th generation. She is very dedicated to her work, even running to a convenience store
-                            to get a gift card mid-stream as her credit card reached its limit.
+                            "Harobo!", Roboco's signature greeting. A cheerful robot from a random wasteland with a beastly setup and a smooth voice, one of the specially
+                            inducted, known as the 0th generation as the 2nd ever hololive member, second only to Tokino Sora
+                            . She is very dedicated to her work, even running to a convenience store
+                            to get a gift card mid-stream as her credit card reached its limit. Roboco's content is majority gaming, in which she enjoys FPS games, 
+                            with chatting and singing streams
+                            every now and again. She also has two pet cats by the name of Koromo and Hapi.
                         </p>
                     </div>
                 </div>
@@ -463,7 +466,12 @@
                             is to one day perform a live concert at the "Yokohama Arena"
                             Everyone in hololive knows
                             not to mess with her. When she's around, every member acts like the prim and proper idol they ought to be and would behave around her. Fun fact,
-                            she is also known for not showing any emotion in horror games and she has moments where her head gets dislocated from technical issues.
+                            she is also known for not showing any emotion in horror games and she has moments where her head gets dislocated from technical issues. Sora also has two companions
+                            that sometimes appears in her streams, "Yujin-A"(Friend-A) or better known as A-chan, her manager and the one that controls the more technical parts of her streams, of which
+                            are known to be great friends with Sora which is especially apparent during Sora's third anniversary stream in which
+                            "A-chan" wrote a surprise letter to Sora that made her cry even thought she's known to not react strongly to most things
+                            , and a bear that typically copies Sora's movements which is also Sora's mascot, called "Ankimo". Sora's content is primarily gaming, with chatting and singing streams
+                            time to time, and collab streams with other members as well.
                         </p>
                     </div>
                 </div>
@@ -518,7 +526,11 @@
                             "Nyahallo!" Sakura Miko, one of the special Generation 0, and yet always finds herself in bad but hilarious predicaments. She once
                             was texted by her mother mid-stream, saying she was watching, burnt her house down in minecraft by accident and accidentally
                             launching an "eroge" or R18+ visual novel by accident on stream.
-                            She strives to do her best but keeps failing in the most epic way. Which, funnily enough, is one of her charms.
+                            She strives to do her best but keeps failing in the most epic way. Which, funnily enough, is one of her charms. She is nicknamed "Elite Miko" as her
+                            actions are typically sporatic and unpredictable sometimes talking in giberish, dropping english vulgarities occasionally that she learned from her fans
+                            and through games like the infamous GTA V, she can sometimes also be seen doing "erotic" things during streams like looking up female character's skirts and
+                             what not. Miko's content is primarily gaming with the occasional singing and chatting streams. Fun fact, her mother is known to be an active supporter of hers
+                             also dubbed as the first "miko-pi"(Miko's fan), sometimes talking to her about her career and giving her ideas.
                         </p>
                     </div>
                 </div>
@@ -571,9 +583,15 @@
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             "Sui-chan wa kyou mo kawaii!" Suisei, the shooting star we all know and love. She started vTubing by drawing her own model,
-                            animating it which has changed now with a updated look from a different artist, making music and performing her own original songs. She was part of INoNaKa Music before moving
-                            to Hololive as part of generation 0 later on. She is also known for her insane tetris ability, ability to create and sing songs,
-                            and her psychopathic tendencies at times.
+                            animating it which has changed now with a updated look from a different artist, making music and performing her own original songs. She was part of INoNaKa Music after getting rejected once during interviews but got accepted on the condition of joining INoNaKa
+                             before moving
+                            to Hololive as part of generation 0 later on with her main goal being to perform in Tokyo Budokan. 
+                            She is also known for her insane tetris ability, ability to create and sing songs,
+                            and her psychopathic tendencies at times. She began receiving the nickname "Suicopath" or "Psychopath Suisei" from her playing a game called Project Winter, where she was sometimes
+                             displays very psychopatic behaviours, she once said that she didn't mind this meme and she found it funny. But don't let the meme fool you, Suisei is also plenty cute as well.
+                             Her content is primarily gaming with chatting streams occasionally and singing streams frequently and has a weekly radio show by the name of "Music Space" where she sings songs that the viewer can request
+                              and reads emails sent by fans,
+                              with guest appearances occasionally.
                         </p>
                     </div>
                 </div>
@@ -628,7 +646,8 @@
                             "Konkapu!" As part of the first generation of hololive, Mel is a cute, fun and innocent vampire. Yet,
                             she somehow manages to be in some questionable positions thanks to her not-so-innocent colleagues.
                             She is also nicknamed banpire due to the YouTube algorithm banning her in multiple occasions despite
-                            not doing anything wrong. Fun fact, she loves acerola juice.
+                            not doing anything wrong in which ones she made a video to "spite" YouTube by being very provocative, singing a song about breasts.
+                            Her content is primarily gaming in which her favourite game series is the Resident Evil series, with the occaisonal singing, ASMR and chat streams Fun fact, she loves acerola juice.
                         </p>
                     </div>
                 </div>
@@ -4028,11 +4047,10 @@
         </div>
 
 
-
+        <!--Scroll to top button-->
+        <button onclick="topFunction()" id="scroll_to_top" title="Go to top">Up</button>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <!--Scroll to top button-->
-    <button onclick="topFunction()" id="scroll_to_top" title="Go to top">Up</button>
 
 </html>
