Added description to 3 idols in Hololive China

--- a/index.html
+++ b/index.html
@@ -3775,7 +3775,10 @@
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             A former member of the now retired Hololive China.
-                        </p>
+                            However, she streams on billibilli, a streaming platform similar to YouTube due to 
+                            YouTube being banned in China. A talented polyglot, speaking Chinese, Japanese and 
+                            amazing English.She cares deeply for her fans and their well-being. 
+                            Little thing, she has a slight obsession with Minato Aqua.
                     </div>
                 </div>
             </div>
@@ -3828,6 +3831,8 @@
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             A former member of the now retired Hololive China.
+                            However, she streams on billibilli, a streaming platform similar to YouTube due to 
+                            YouTube being banned in China.
                         </p>
                     </div>
                 </div>
@@ -3881,6 +3886,8 @@
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             A former member of the now retired Hololive China.
+                            However, she streams on billibilli, a streaming platform similar to YouTube due to 
+                            YouTube being banned in China.
                         </p>
                     </div>
                 </div>
@@ -3934,6 +3941,10 @@
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             A former member of the now retired Hololive China.
+                            However, she streams on billibilli, a streaming platform similar to YouTube due to 
+                            YouTube being banned in China. She is a true savage and a gamer at heart.
+                            She is the most connected to her fans, being the only idol to join the Hololive Fan Server.
+                            She is a pro gamer, playing with the top players in Overwatch.
                         </p>
                     </div>
                 </div>
@@ -3987,6 +3998,9 @@
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             A former member of the now retired Hololive China.
+                            However, she streams on billibilli, a streaming platform similar to YouTube due to 
+                            YouTube being banned in China. She imparts her wise words to her fans 
+                            and has a personality similar to Tokino Sora
                         </p>
                     </div>
                 </div>
@@ -4040,6 +4054,8 @@
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             A former member of the now retired Hololive China.
+                            However, she streams on billibilli, a streaming platform similar to YouTube due to 
+                            YouTube being banned in China.
                         </p>
                     </div>
                 </div>
