Added remaining Hololive CHina

--- a/index.html
+++ b/index.html
@@ -3858,7 +3858,8 @@
                         <p style="width: 100%; color:black; font-size: 20px;">
                             A former member of the now retired Hololive China.
                             She streamed on billibilli, a streaming platform similar to YouTube due to 
-                            YouTube being banned in China.
+                            YouTube being banned in China. She is an ordinary high school student by day, 
+                            but a phantom thief by night. 
                         </p>
                     </div>
                 </div>
@@ -3913,7 +3914,8 @@
                         <p style="width: 100%; color:black; font-size: 20px;">
                             A former member of the now retired Hololive China.
                             She streamed on billibilli, a streaming platform similar to YouTube due to 
-                            YouTube being banned in China.
+                            YouTube being banned in China. A misbehaving deliquent at first glance, this girl 
+                            actually has a heart of gold, a strives to protect the things she holds dear.
                         </p>
                     </div>
                 </div>
@@ -4026,7 +4028,7 @@
                             A former member of the now retired Hololive China.
                             She streamed on billibilli, a streaming platform similar to YouTube due to 
                             YouTube being banned in China. She imparts her wise words to her fans 
-                            and has a personality similar to Tokino Sora
+                            and has a personality similar to Tokino Sora. She has onced proposed to Rosalyn.
                         </p>
                     </div>
                 </div>
@@ -4081,7 +4083,9 @@
                         <p style="width: 100%; color:black; font-size: 20px;">
                             A former member of the now retired Hololive China.
                             She streamed on billibilli, a streaming platform similar to YouTube due to 
-                            YouTube being banned in China.
+                            YouTube being banned in China. She is a librarian from another dimension,  
+                            who travels to worlds to widen her knowledge. She remained in our world as she became 
+                            obssesed with Trading Card Games(TCG).
                         </p>
                     </div>
                 </div>
